<resources>
    <string name="app_name">Citi Sense</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="waiting_for_location">Waiting for location</string>
    <string name="hazardous">hazardous</string>
    <string name="very_unh">very unh.</string>
    <string name="unhealthy">unhealthy</string>
    <string name="u_for_sens">u. for sens.</string>
    <string name="moderate">moderate</string>
    <string name="good">good</string>
    <string name="news">Two weeks ago, the Environmental Protection Agency published proposals to designate 12 areas of the country—including Alton and Marion, Illinois; Jefferson and Posey, Indiana; DeSoto Parish, Louisiana; Anne Arundel and Baltimore, Maryland; St. Clair, Michigan; Franklin, Missouri; Muskogee, Oklahoma; and Freestone, Rusk, and Titus, Texas—as “nonattainment” for the dangerous pollutant sulfur dioxide, or SO2.  While EPA won’t finalize the designations until July, what needs to happen next is for the agency to recognize that there are far more than 12 areas across the United States that are in need of having their air cleaned up. \n\n But to explain the importance of all this, we need to back up a bit.  One of the most powerful tools under the Clean Air Act for protecting the air we breathe is something called an “ambient air quality standard.”  The way it works is this: EPA follows the science and determines the level for certain pollutants above which it’s unsafe for human health, and then issues standards for those pollutants.  For SO2 pollution, it’s 75 parts per billion.  EPA then determines what parts of the country have safe air quality, and what parts have air quality worse than the standard.  These latter areas are called “nonattainment,” and the Clean Air Act imposes strict requirements on states to fix their air quality problems, and directs EPA to step in and handle things if states don’t shoulder their responsibility.</string>
    <string name="title_activity_maps">Map</string>
    <string name="aqi_summary_hazardous_text">Health alert: everyone may experience more serious health effects. Everyone should avoid outdoor exertion.</string>
    <string name="aqi_summary_very_unhealthy_text">Health warnings of emergency conditions. The entire population is more likely to be affected.</string>
    <string name="aqi_summary_unhealthy_text">Everyone may begin to experience some adverse health effects, and more sensitive people may experience more severe effects.</string>
    <string name="aqi_summary_unhealthy_for_sensitive_text">People with lung disease, older adults and children are at a greater risk from exposure to certain pollutants.</string>
    <string name="aqi_summary_moderate_text">Air quality is acceptable; however, there may be a moderate health concern for a very small number of people.</string>
    <string name="aqi_summary_good_text">Air quality is considered satisfactory, and air pollution poses little or no risk.</string>
    <string name="aqi_summary_hazardous_title">HAZARDOUS</string>
    <string name="aqi_summary_very_unhealthy_title">VERY UNHEALTHY</string>
    <string name="aqi_summary_unhealthy_title">UNHEALTHY</string>
    <string name="aqi_summary_unhealthy_for_sensitive_title">UNHEALTHY FOR SENSITIVE</string>
    <string name="aqi_summary_moderate_title">MODERATE</string>
    <string name="aqi_summary_good_title">GOOD</string>
    <string name="search_hint">Search</string>
    <string name="no_data">NO DATA</string>
    <string name="overview">Overview</string>
    <string name="CO">Carbon monoxide</string>
    <string name="PM2.5">Particulate matter 2.5um</string>
    <string name="PM10">Particulate matter 10um</string>
    <string name="O3">Ozone</string>
    <string name="NO2">Nitrogen oxides</string>
    <string name="co_description">Carbon monoxide and black carbon arise at incomplete combustion. Carbon monoxide is a colorless and odorless gas that can cause serious health issues and even death. It binds with hemoglobin more easily than oxygen, therefore vital organs, like brain and hearth do not get enough of oxygen. Black carbon represent from 5 to 20 % of particulate matter (PM10). Main sources of pollution with black carbon are traffic and burning of biomass. In some regions around the Alps, burning of wood can generally be bigger environmental problem then traffic. In the atmosphere, black carbon absorbs sun light.</string>
    <string name="no_description">Nitrogen dioxide and other compounds of nitrogen and oxygen often referred to as NOx are group of very reactive gasses and serious air pollutants. Main sources of pollution with nitrogen dioxide are traffic, thermoelectric plants and district heating plants or oil-fired furnaces with high temperatures. Nitrogen oxides have also some negative effects in stratosphere, like expanding the ozone hole, but these processes are not happening directly in our environment. (EPA, 2012)</string>
    <string name="o3_description">Ozone is a pail blue gas with chemical formula O3, which is usually located in the stratosphere where protects life on earth from dangerous UV radiation. But, although ozone is very important, if not crucial for life on earth to exists, can, in lower layers of the atmosphere, be dangerous for human health. It mainly effect lungs and can cause health issues like chest pain, heavy breathing, and wounds on lungs and can worsen conditions like bronchitis or lung cancer. Kids are especially prone to poisoning with ozone, because they have smaller and sensitive lungs.</string>
    <string name="particulate_mater_description">Particulate or particulate matter (PM) is a microscopic solid or liquid matter, usually invisible to the naked eye. It can originate from various man-made and natural sources. Based on it their size, we divide it in to two major groups: bigger particles (PM10), which have about 10 µm in diameter and smaller particles (PM2,5), which have about 2,5 µm in diameter. But size is not the only difference between this two groups; the bigger particulate, PM10, is usually found in the smoke, dirt and dust from factories, on farms and roads, in mold, pollen and spores while the major sources of pollution with the smaller particulate, PM2,5, are the Volatile organic compounds and toxic heavy metals which are very dangerous for human organism. The most dangerous compound of PM10 is the black carbon, which can represent from 5 – 40% of all the particles.</string>
    <string name="so2_description">Sulfur dioxide arises, when burning material which contains sulfur. It is a colorless gas, with distinctive scent. Main sources of pollution with sulfur dioxide are various industrial processes and fuel combustion. Although some of SO2 is released at volcano eruptions or bigger fires, man-made sources still produce majority of sulfur dioxide in the troposphere. Sulfur dioxide mainly causes acid rain which have many negative effects on plants and water organisms, because it can drastically lower water’s pH. Usually it is not dangerous for human health, but it also harms infrastructure and statues.</string>
    <string name="aqi_description">The AQI is an index for reporting daily air quality. It tells you how clean or polluted your air is, and what associated health effects might be a concern for you. The AQI focuses on health effects you may experience within a few hours or days after breathing polluted air.</string>
    <string name="information">Information</string>
    <string name="aqi_long_name">Air Quality Index</string>
    <string name="scale">AQI scale:</string>
    <string name="co_name">Carbon monoxide</string>
    <string name="o3_name">Ozone</string>
    <string name="no_name">Nitrogen oxides</string>
    <string name="pm_name">Particulate matter</string>
    <string name="aqi_good">good</string>
    <string name="aqi_unhealthy_sensitive">unhealthy for sensitive</string>
    <string name="aqi_moderate">moderate</string>
    <string name="unhealthy_sensitive">un. for sensitive</string>
    <string name="aqi_unhealthy">unhealthy</string>
    <string name="very_unhealthy">very un.</string>
    <string name="aqi_hazardous">hazardous</string>
    <string name="aqi_val_good">50</string>
    <string name="aqi_val_moderate">100</string>
    <string name="aqi_val_unhealthy_sensitive">150</string>
    <string name="aqi_val_unhealthy">200</string>
    <string name="aqi_val_very_unhealthy">300</string>

    <item type="id" name="pollutant_tag"/>
    <item type="id" name="aqi_tag"/>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pollutants">Pollutants</string>
    <string name="graph">Graph</string>
    <string name="open_location_settings">Open location settings</string>
    <string name="location_not_available_text">With disabled location, some functionality will be disabled.</string>
    <string name="Cancel">Cancel</string>
    <string name="no_data_available">No data</string>
    <string name="location_disabled">Location is disabled</string>
    <string name="fetching_data">Fetching data</string>
    <string name="measurements_from_past_hour">measurements from past hour</string>
    <string name="measurements_from_past_12_hours">measurements from past 12 hours</string>
</resources>
