<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.citisense.vidklopcic.citisense.fragments.AqiOverviewGraph"
    android:clickable="true"
    android:onClick="fragmentClicked">
    <RelativeLayout
        android:id="@+id/aqi_overview_chart_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/aqi_overview_chart_bg">
        <LinearLayout android:id="@+id/chart_background"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/aqi_chart_text_container"
            android:layout_above="@+id/aqi_overview_x_labels_container">
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.4"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/aqi_overview_chart_separator_lines"
                android:background="@color/aqi_hazardous"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/aqi_overview_chart_separator_lines"
                android:background="@color/aqi_very_unhealthy"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/aqi_overview_chart_separator_lines"
                android:background="@color/aqi_unhealthy"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/aqi_overview_chart_separator_lines"
                android:background="@color/aqi_unhealthy_for_sensitive"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/aqi_overview_chart_separator_lines"
                android:background="@color/aqi_moderate"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/aqi_chart_text_container"
            android:orientation="vertical"
            android:layout_above="@+id/aqi_overview_x_labels_container"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="2dp"
            android:layout_marginBottom="-6dp">
            <TextView
                style="@style/AqiChartTextSeparator"
                android:layout_weight="0.4"
                android:text="@string/hazardous"/>
            <TextView
                style="@style/AqiChartTextSeparator"
                android:layout_weight="0.2"
                android:text="@string/very_unh"/>
            <TextView
                style="@style/AqiChartTextSeparator"
                android:layout_weight="0.1"
                android:text="@string/unhealthy"/>
            <TextView
                style="@style/AqiChartTextSeparator"
                android:layout_weight="0.1"
                android:text="@string/u_for_sens"/>
            <TextView
                style="@style/AqiChartTextSeparator"
                android:layout_weight="0.1"
                android:text="@string/moderate"/>
            <TextView
                style="@style/AqiChartTextSeparator"
                android:layout_weight="0.1"
                android:layout_marginTop="-6dp"
                android:layout_marginBottom="6dp"
                android:text="@string/good"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/aqi_chart_bars_layout"
            android:layout_above="@+id/aqi_overview_x_labels_container"
            android:orientation="horizontal"
            android:layout_toLeftOf="@+id/aqi_chart_text_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </LinearLayout>
        <LinearLayout style="@style/AqiChartLabel.layout.container"
            android:layout_marginRight="-10dp"/>
        <LinearLayout android:id="@+id/aqi_overview_x_labels_container"
            style="@style/AqiChartLabel.layout.container"
            android:background="@color/aqi_overview_label_separator_color"
            android:layout_toLeftOf="@+id/aqi_chart_text_container">

        </LinearLayout>
    </RelativeLayout>

</FrameLayout>
